# obs-atsc

./: .gitmodules  CMakeLists.txt  README.rst
cmake/: FindLibObs.cmake
data/locale/: en-US.ini
src/: CMakeLists.txt  obs-atsc-module-ui.cpp  obs-atsc-module-ui.h  obs-atsc-module.cpp  output.ui
src/ffmpeg/: obs-ffmpeg-ac3.c  obs-ffmpeg-vaapi.c
